<resources>
    <string name="app_name">写字派</string>
    <string name="app_description">重温写字之美，共襄文化传承</string>
    <string name="init_sd_error">初始化本地目录失败</string>
    <string name="setting_version">检测到新版本，是否更新到最新版本？</string>
    <string name="cancel">取消</string>
    <string name="ok">确认</string>
    <string name="back">返回</string>
    <string name="exit">退出登录</string>
    <string name="shared">分享</string>
    <string name="bind">绑定</string>
    <string name="unbind">未绑定</string>
    <string-array name="array_circle_type">
        <item>学习</item>
        <item>交友</item>
        <item>班级</item>
    </string-array>
    <string-array name="array_circle_isopen">
        <item>私密</item>
        <item>公开</item>
    </string-array>
    <string name="join_info">圈成员</string>
    <string name="join_txt">加入</string>
    <string name="join_already_txt">已加入</string>
    <string name="join_quit_txt">退出圈子</string>
    <string name="apply_join_txt">申请列表</string>
    <string name="wait_conform_txt">已申请</string>
    <string name="report_txt">举报</string>
    <string name="modify_circle_txt">修改圈子</string>
    <string name="manager_circle_txt">查看成员</string>
    <string name="circle_school_txt">学习圈</string>
    <string name="circle_normal_txt">普通圈</string>
    <string name="circle_tag_title_txt">标签</string>
    <string name="circle_hot_tag_txt">推荐热门标签</string>
    <string name="circle_tag_hint">添加圈子标签，让你的圈子更丰富</string>
    <string name="circle_tag_add_hint">添加自定义标签（限6个字）</string>
    <string name="circle_creat_user">创建人</string>
    <string name="gonggao">公&#160;&#160;告</string>
    <string name="sure">确&#160;&#160;定</string>
    <string name="square_txt">广场</string>
    <string name="circle_txt">圈子</string>
    <string name="pk_txt">大会</string>
    <string name="system_msg_txt">系统</string>
    <string name="person_msg_txt">个人</string>
    <string name="prompt">提示</string>
    <string name="recording_video">录制视频</string>
    <string name="The_video_to_start">录像开始</string>
    <string name="Whether_to_send">是否使用该视频？</string>
    <string name="Open_the_equipment_failure">打开设备失败!</string>
    <string name="all">全部</string>
    <string name="essence">精华</string>
    <string name="circle_msg">圈子动态</string>
    <string name="my_circle">我的圈子</string>
    <string name="load_more">加载更多…</string>
    <string name="loading">加载中…</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">松开刷新…</string>
    <string name="pull_to_refresh_refreshing_label">加载中…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="student">学生专区</string>
    <string name="teacher">教师专区</string>
    <string name="video">大会视频</string>
    <string name="student_double">学生专区(复赛作品)</string>
    <string name="teacher_double">教师专区(复赛作品)</string>
    <string name="video_double">优秀视频</string>
    <string name="good_works">初赛优秀作品</string>
    <string name="regist_title">注册</string>
    <string name="regist_input_email_hint">请输入用户名</string>
    <string name="regist_input_pwd_hint">请输入密码</string>
    <string name="regist_confirm_pwd_hint">请确认密码</string>
    <string name="regist_create_account">注册</string>
    <string name="forget_bt">下一步</string>
    <string name="regist_create_finish">完成</string>
    <string name="regist_login">登录</string>
    <string name="login_title">登录</string>
    <string name="login_userno_hint">请输入手机号</string>
    <string name="regist_numb_hint">请输入手机号码</string>
    <string name="regist_verify_hint">请输入验证码</string>
    <string name="regist_verify_get">获取验证码</string>
    <string name="regist_verify_try_get">重新获取</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="regist_pwd_hintt">请设置密码</string>
    <string name="regist_fortget_hint">请重置密码</string>
    <string name="regist_verify_pwd">已经发送短信验证到</string>
    <string name="check_verify_pwd">短信验证码已发送,请查收!</string>
    <string name="login_forget">忘记密码</string>
    <string name="login_regist">短信注册</string>
    <string name="forget_title">找回密码</string>
    <string name="forget_input_user_hint">请输入帐号名</string>
    <string name="forget_submit">找回密码</string>
    <string name="forget_back_login">返回登录</string>
    <string name="regist_agreement">已阅读并且同意</string>
    <string name="regist_agreement_text">&#060;&#060;注册协议&#062;&#062;</string>
    <string name="my_download">我的下载</string>
    <string name="my_post">我的发帖</string>
    <string name="my_message">我的消息</string>
    <string name="my_config">设置</string>
    <string name="my_user_response">用户反馈</string>
    <string name="my_recommend_to_friend">把写字派推荐给好友</string>
    <string name="pic_demo">图片示范</string>
    <string name="post_works1">请将您的快递单拍照，上传至此</string>
    <string name="post_works2">物流公司</string>
    <string name="post_works3">请填写物流公司</string>
    <string name="post_works4">物流单号</string>
    <string name="post_works5">请填写快递单号</string>
    <string name="post_works6">寄送须知:</string>
    <string name="post_works7">考试不作弊承诺书下载链接:</string>
    <string name="post_works8">寄送地址:</string>
    <string name="post_works9">姓名:&#160;&#160;李维&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;电话:&#160;&#160;13401157554</string>
    <string name="post_works10">地址:&#160;&#160;北京市朝阳区安定路1号奥体中心--体育场南看台写字派书院</string>
    <string name="post_works11">请在考试结束后三日内将实践考试中所有考试作品（与实践考试期间提交图片、视频作品同幅）及亲笔签名的不作弊承诺书以快递方式寄出至主办方，如在规定时间内（以快递单时间为准）没有寄出，则视为考生自动放弃本次实践考试。</string>
    <string name="word_cs">草书</string>
    <string name="word_xs">行书</string>
    <string name="word_ks">楷书</string>
    <string name="word_ls">隶书</string>
    <string name="word_zs">篆书</string>
    <string name="word_style_0">无</string>
    <string name="word_style_1">回宫格</string>
    <string name="word_style_2">回宫米字格</string>
    <string name="word_style_3">九宫格</string>
    <string name="word_style_4">米圆格</string>
    <string name="word_style_5">米字格</string>
    <string name="word_style_6">田字格</string>
    <string name="video_style_1">逆入</string>
    <string name="video_style_2">切入</string>
    <string name="video_style_3">顺入</string>
    <string name="video_style_4">中锋</string>
    <string name="video_style_5">侧锋</string>
    <string name="video_style_6">藏锋收笔</string>
    <string name="video_style_7">露锋收笔</string>
    <string name="video_style_8">提笔、按笔、顿笔、驻笔</string>
    <string name="video_style_9">折笔</string>
    <string name="video_style_10">转笔</string>
    <string name="video_style_11">牵丝</string>
    <string name="tip_input">请输入汉字(最多7个)</string>
    <string name="tv_empty">暂无数据</string>
    <string name="tv_no_login"><u>请先登陆/注册</u></string>
    <string name="tv_store_string">收藏</string>
    <string name="tv_clock_string">提醒</string>
    <string name="tv_study_string">开始学习</string>
    <string name="tv_comp_string">比对</string>
    <string name="tv_ge_string">字格</string>
    <string name="tv_bi_string">笔法</string>
    <string name="tv_video_string">视频</string>
    <string name="tv_add_course_string">创建课程</string>
    <string name="tv_course_name_string">课程名称</string>
    <string name="tv_course_name_hit_string">输入课程名称(默认为自选课程,15字以内)</string>
    <string name="tv_course_class_hit_string">输入课件名称</string>
    <string name="tv_course_face_string">添加封面，让你的封面多元化</string>
    <string name="tv_course_next">下一步</string>
    <string name="tv_teacher_apply">提交申请</string>
    <string name="tv_teacher_pic_title">教师资格证照片：</string>
    <string name="tv_teacher_pic_info">机构教师请提供机构在职证明，附带身份证照片，请手持证件拍照。</string>
    <string name="tv_teacher_apply_status">审核状态：</string>
    <string name="apply_for_teacher_should_know">\t\t《中华人民共和国教师资格证书》是教育行业从业教师的许可证，也是写字派APP教师身份认证申请的重要有效证件。\n\n\t\t如您暂未获得《教师资格证书》，可提供在职机构教师证明进行认证申请。请您手持《中华人民共和国教师资格证书》拍摄照片（如参考示例所示），《教师资格证》上的所有信息清晰可见；照片需免冠，建议不要化妆，手持证件人的五官清晰可见。确保照片内容真实有效，不得做任何修改。</string>
    <string name="durationformatshort">%2$d\'%5$02d\'\'</string>
    <string name="durationformatlong">%1$d\'%3$02d\'%5$02d\'\'</string>
    <string name="presstalk">按住 说话</string>
    <string name="letoff">松开 结束</string>
    <string name="cancelsend">松开手指，取消发送</string>
    <string name="recordfinish">录音完成</string>
    <string name="stopRecordFail">录音停止失败</string>
    <string name="recordError"> 录音启动失败，请检查剩余存储空间大小 或 是否被其他程序占用</string>
    <string name="prepardError">录音准备失败</string>
    <string name="storageError">本地存储损坏，无法写入文件</string>
    <string name="volumeTips"> 请打开音量收听</string>
    <string name="paipai">秒拍</string>
    <string name="profiles">简介</string>
    <string name="comparison">比对</string>
    <string name="delete">删除</string>
    <string name="down">下载</string>
    <string name="smallvideo">小视频</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="code_token">通过code获取accesstoken</string>
    <string name="refresg_token">通过refreshtoken获取accesstoken</string>
    <string name="test_mac">测试签名</string>
    <string name="profile">获取个人名片</string>
    <string name="relation">获取好友列表</string>
    <string name="getcode">获取code</string>
    <string name="gettoken">获取token</string>
    <string name="title_activity_helper_activity_for_get_token_ut">HelperActivityForGetTokenUT</string>
    <string name="saveResult">保存token等结果到SD卡</string>
    <string name="openid">获取用户openId</string>
    <string name="phone">获取用户电话号码</string>
    <string name="demo_old_api">测试DeprecatedApi(不鼓励使用)</string>
    <string name="fast_oauth_btn">对话框 Oauth</string>
    <string name="de_actionbar_myacc">"个人账号"</string>
    <string name="de_actionbar_sub_group">"群组"</string>
    <string name="de_actionbar_sub_private">"我的私人会话"</string>
    <string name="de_actionbar_sub_discussion">"我的讨论组"</string>
    <string name="de_actionbar_sub_system">"系统消息"</string>
    <string name="de_actionbar_sub_defult">"聊天"</string>
    <string name="de_actionbar_set_public">"公众号"</string>
    <string name="de_actionbar_system">"系统消息"</string>
    <string name="de_dialog_item_message_delete">删除消息</string>
    <string name="de_notification_information">开启后，在设定时间段内收到新消息时不会响铃或振动。</string>
    <string name="de_group_list_default_discussion_name">讨论组</string>
    <string name="de_message_content_draft">[草稿]</string>
    <string name="de_message_at_me">[有人@我]</string>
    <string name="filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="little_calligraphy_teacher_photo">说明：2寸免冠近照，蓝（红或白）底；该照片将直接用于小书法师（书法专业人才）证书的证件照，请择优上传</string>
    <string name="institution_join_in">机构申请入驻</string>
    <string name="little_calligraphy_teacher_sign_up">报名（5月1日至5月31日）</string>
    <string name="little_calligraphy_teacher_bind">提交绑定到登录帐号</string>
    <string name="little_calligraphy_teacher_pay">前去支付</string>
</resources>