<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_post_works"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray">

    <include
        android:id="@+id/top"
        layout="@layout/social_topbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top"
        android:padding="10px">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="160px">

            <View
                android:layout_width="20px"
                android:layout_height="5px"
                android:layout_marginBottom="16px"
                android:layout_marginTop="36px"
                android:background="@color/social_red"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20px"
                android:layout_marginTop="20px"
                android:text="@string/post_works1"
                android:textColor="@color/social_red" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.facebook.drawee.view.SimpleDraweeView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        fresco:placeholderImage="@drawable/mail_temp"
                        fresco:placeholderImageScaleType="fitXY"
                        fresco:viewAspectRatio="1.97" />

                    <TextView
                        android:id="@+id/tv_pic_demo"
                        style="@style/SocialNormalTxtWhiteMin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@color/social_red"
                        android:padding="5px"
                        android:text="@string/pic_demo" />

                    <ImageView
                        android:id="@+id/img_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/exam_add" />
                </RelativeLayout>

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/img_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:visibility="gone"
                    fresco:placeholderImage="@drawable/mail_temp"
                    fresco:placeholderImageScaleType="fitXY"
                    fresco:viewAspectRatio="1.97" />

                <ImageView
                    android:id="@+id/img_delete"
                    android:layout_width="35px"
                    android:layout_height="35px"
                    android:layout_alignRight="@+id/img_photo"
                    android:scaleType="fitXY"
                    android:src="@drawable/delete_rectangle"
                    android:visibility="gone" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10px"
                android:layout_marginTop="20px"
                android:background="@drawable/round_corner_white"
                android:gravity="center_vertical"
                android:paddingBottom="30px"
                android:paddingTop="30px">

                <ImageView
                    android:id="@+id/icon_must1"
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10px"
                    android:src="@drawable/stars_icon" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20px"
                    android:layout_toRightOf="@id/icon_must1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/post_works2"
                        android:textSize="30px" />

                    <EditText
                        android:id="@+id/et_wlgs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="20px"
                        android:background="@null"
                        android:hint="@string/post_works3"
                        android:textColor="#999999"
                        android:textSize="30px" />
                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20px"
                android:background="@drawable/round_corner_white"
                android:gravity="center_vertical"
                android:paddingBottom="30px"
                android:paddingTop="30px">

                <ImageView
                    android:id="@+id/icon_must2"
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10px"
                    android:src="@drawable/stars_icon" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20px"
                    android:layout_toRightOf="@id/icon_must2"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/post_works4"
                        android:textSize="30px" />

                    <EditText
                        android:id="@+id/et_kddh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="20px"
                        android:background="@null"
                        android:hint="@string/post_works5"
                        android:textColor="#999999"
                        android:textSize="30px" />
                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:text="@string/post_works6"
                android:textColor="@color/social_red"
                android:textSize="30px" />

            <TextView
                android:id="@+id/tv_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10px"
                android:lineSpacingExtra="3dp"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/post_works11" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40px"
                android:text="@string/post_works7"
                android:textSize="30px" />

            <TextView
                android:id="@+id/tv_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10px"
                android:textColor="@color/topic_ok" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40px"
                android:text="@string/post_works8"
                android:textColor="@color/social_red"
                android:textSize="30px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10px"
                android:text="@string/post_works9" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10px"
                android:text="@string/post_works10" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_sure"
        style="@style/SocialNormalTxtWhite"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_red_gray_selector"
        android:gravity="center"
        android:text="@string/sure" />

</RelativeLayout>