<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        style="@style/SocialNormalTxtBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/setting_version" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@drawable/social_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_ok"
            style="@style/SocialNormalTxtBlack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@color/white"
            android:padding="15dp"
            android:text="@string/ok"
            android:textStyle="bold" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@drawable/social_line" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/SocialNormalTxtBlack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@color/white"
            android:padding="15dp"
            android:text="@string/cancel"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>